Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34063

QWebView SVG stroke-dasharray not supported

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.2.0
    • 4.8.5, 5.1.1, 5.2.0 Alpha
    • WebKit
    • None
    • Mac OS X 10.8.5 Qt 4.8.5 PyQt 4.10.3

      SVG property stroke-dasharray does not appear to be supported in QWebView. Rendering of SVG is otherwise fine. The attached example (taken from Mozilla Developer Network https://developer.mozilla.org/en-US/docs/Web/SVG/Attribute/stroke-dasharray ) results in a stack of solid lines when rendered in a WebView.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            mfitzp Martin Fitzpatrick
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes