SVG stroke-dasharray not working

When creating the QPainterPathStroker we forget to also copy the dashPattern property.

Task-number: QTBUG-34063
Change-Id: Idb4d124447e2727c418c8ca5e1de694245f6ba22
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@digia.com>